# Plugin-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/: CMakeLists.txt
plugin/Source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/include/: Parameters.h  PluginEditor.h  PluginProcessor.h
test/: CMakeLists.txt
test/source/: ProcessorTest.cpp
